On-flight diagnostic